<resources>
    <string name="app_name">Client</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">TRANG CHỦ</string>
    <string name="menu_subscribe_news">Thông báo</string>
    <string name="menu_drink_list">DANH SÁCH SẢN PHẨM</string>
    <string name="menu_drink_detail">CHI TIẾT SẢN PHẨM</string>
    <string name="popular_categories">SẢN PHẨM PHỔ BIẾN</string>
    <string name="best_deals">SẢN PHẨM MUA NHIỀU</string>
    <string name="menu_menu">LOẠI SẢN PHẨM</string>
    <string name="size">Size</string>
    <string name="add_on">Topping</string>
    <string name="menu_cart_item">Giỏ hàng</string>
    <string name="menu_shipping">DANH SÁCH ĐƠN HÀNG</string>
    <string name="menu_logout">Đăng xuất</string>
    <string name="action_clear_cart">Xóa giỏ hàng</string>
    <string name="action_search">Tìm kiếm</string>
    <string name="edt_chat">Your message</string>
    <string name="detail_drinks_name">Tên sản phẩm:</string>
    <string name="detail_drinks_price">1,000</string>
    <string name="detail_drinks_description">Mô tả</string>
    <string name="btnShowComment">Đánh giá của khách hàng</string>
    <string name="txt_empty_cart">Giỏ hàng trống!</string>
    <string name="edt_discount_code">Mã giảm giá...</string>
    <string name="txt_total_price">Tổng tiền: 0 VNĐ</string>
    <string name="btn_place_order">Đặt Hàng</string>
    <string name="tv_add_topping">Thêm Topping</string>
    <string name="edt_search">Tìm kiếm</string>
    <string name="txt_drinks_name">Sản phẩm 1</string>
    <string name="txt_drinks_size">Size</string>
    <string name="txt_drinks_addon">Addon</string>
    <string name="txt_drinks_price">100.000 VNĐ</string>
    <string name="text_example">Example</string>
    <string name="txt_comment_name">Name</string>
    <string name="txt_comment_date">Vài phút trước</string>
    <string name="btn_ok">Đồng ý</string>
    <string name="txt_title_detail">CHI TIẾT ĐƠN HÀNG</string>
    <string name="btn_cancel">TỪ CHỐI</string>
    <string name="txt_drinks_quantity">So Luong: 1</string>
    <string name="txt_order_date">Today at: 13:05:56 pm</string>
    <string name="txt_order_status">Trang thái:</string>
    <string name="txt_order_comment">Số điện thoại</string>
    <string name="edt_address">Địa Chỉ Nhận Hàng</string>
    <string name="tv_shipping">Phương thức vận chuyển</string>
    <string name="rdi_home_address">Địa chỉ đã lưu</string>
    <string name="rdi_other_address">Địa chỉ khác</string>
    <string name="rdi_ship_this_address">Địa chỉ hiện tại</string>
    <string name="payments">Phương thức thanh toán</string>
    <string name="rdi_cod">Thanh toán khi nhận hàng</string>
    <string name="rdi_braintree">Thanh toán trực tuyến</string>
    <string name="edt_hint_comment">Hảy viết thứ gì đó về sản phẩm...</string>
    <string name="edt_name">Họ và tên</string>
    <string name="edt_address_register">Địa chỉ liên hệ</string>
    <string name="ckb_subscribe_news">Đăng ký</string>
    <string name="menu_cart">GIỎ HÀNG</string>
    <string name="nav_favorite">SẢN PHẨM YÊU THÍCH</string>
    <string name="tv_favorite">Sản phẩm yêu thích</string>
    <string name="tv_new_user">ĐĂNG KÝ</string>
    <string name="edt_phone">Số điện thoại</string>
    <string name="nav_home">Trang chủ</string>
    <string name="nav_menu">Sản phẩm</string>
    <string name="nav_cart">Giỏ hàng</string>
    <string name="nav_view_orders">Đơn hàng</string>
    <string name="menu_favorite">Yêu thích</string>
    <string name="tv_rating">ĐÁNH GIÁ SẢN PHẨM</string>
    <string name="edt_update_order">CẬP NHẬT SẢN PHẨM</string>
    <string name="tv_subscribe_news">Chọn vào ô và xác nhận nếu bạn muốn nhận được thông báo từ chúng tôi!</string>
    <string name="tv_subscribe">ĐĂNG KÝ NHẬN THÔNG BÁO</string>
    <string name="tv_place_order">HOÀN TẤT ĐƠN HÀNG</string>
    <string name="tv_info_user">Thông tin khách hàng</string>
    <string name="tv_ship">Lựa chọn nhận hàng</string>
    <string name="nav_profile">Người dùng</string>
    <string name="btn_update_profile">Cập nhật</string>
    <!-- API KEY-->
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyANY5gV9p_N2925s__J9P6XfN7IRkp2YvI</string>
    <string name="btn_register">Đăng ký</string>

</resources>