<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_baseline_markunread_24"
            android:title="@string/menu_subscribe_news" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_baseline_category_24"
            android:title="@string/nav_menu" />
        <item
            android:id="@+id/nav_favorite"
            android:icon="@drawable/ic_favorite"
            android:title="@string/menu_favorite" />
        <item
            android:id="@+id/nav_cart"
            android:icon="@drawable/ic_baseline_shopping_cart_24"
            android:title="@string/nav_cart" />
        <item
            android:id="@+id/nav_view_orders"
            android:icon="@drawable/ic_baseline_local_shipping_24"
            android:title="@string/nav_view_orders" />
        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/menu_logout" />
    </group>
</menu>