<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.quantrasuaclient.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.quantrasuaclient.ui.menu.MenuFragment"
        android:label="@string/menu_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/nav_drink_list"
        android:name="com.example.quantrasuaclient.ui.drinklist.DrinkListFragment"
        android:label="@string/menu_drink_list"
        tools:layout="@layout/fragment_drink_list" />

    <fragment
        android:id="@+id/nav_drink_detail"
        android:name="com.example.quantrasuaclient.ui.drinksdetail.DrinkDetailFragment"
        android:label="@string/menu_drink_detail"
        tools:layout="@layout/drink_detail_fragment" />

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.quantrasuaclient.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_view_orders"
        android:name="com.example.quantrasuaclient.ui.view_orders.ViewOrdersFragment"
        android:label="@string/menu_shipping"
        tools:layout="@layout/fragment_cart" />

    <fragment
        android:id="@+id/nav_favorite"
        android:name="com.example.quantrasuaclient.ui.favorite.FavoriteFragment"
        android:label="@string/nav_favorite"
        tools:layout="@layout/favorite_fragment" />

</navigation>