<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/layout_dialog_conner_10"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_dialog_conner_top_left_right"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/tv_place_order"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:padding="5dp"
            android:text="@string/tv_info_user"
            android:textColor="@color/app_color_default"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/edt_addresss"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/layout_custom_edit_text"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/edt_address"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/txt_address_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:fontFamily="@font/roboto_slab"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/action_search"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edt_comments"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@drawable/layout_custom_edit_text"
            android:fontFamily="@font/roboto_slab"
            android:hint="@string/txt_order_comment"
            android:inputType="textMultiLine"
            android:maxLines="5"
            android:padding="10dp"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:padding="5dp"
            android:text="@string/tv_ship"
            android:textColor="@color/app_color_default"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdi_home_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/rdi_home_address"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdi_ship_this_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/rdi_ship_this_address"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdi_other_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/rdi_other_address"
                android:textSize="16sp" />
        </RadioGroup>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_slab_bold"
            android:padding="5dp"
            android:text="@string/payments"
            android:textColor="@color/app_color_default"
            android:textSize="18sp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rdi_cod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/rdi_cod"
                android:textSize="16sp" />

            <RadioButton
                android:id="@+id/rdi_braintree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/rdi_braintree"
                android:textSize="16sp" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="12dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/layout_custom_button_cancel"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/btn_cancel"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_ok"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/layout_custom_button_ok"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/btn_ok"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>