<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/layout_dialog_conner_10"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/layout_dialog_conner_top_left_right"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/tv_subscribe"
        android:textColor="@android:color/white"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="12dp"
        android:paddingLeft="12dp"
        android:paddingRight="12dp"
        android:textSize="19sp"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/tv_subscribe_news"/>
    <CheckBox
        android:id="@+id/ckb_subscribe_news"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/roboto_slab"
        android:text="@string/ckb_subscribe_news"
        android:textSize="22sp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_custom_button_cancel"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/layout_custom_button_ok"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/btn_ok"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>