<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Widget.MaterialComponents.CardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginTop="@dimen/margin_8dp"
    android:layout_marginEnd="@dimen/margin_8dp"
    android:layout_marginBottom="2dp"
    android:orientation="vertical"
    app:strokeColor="@android:color/darker_gray"
    app:strokeWidth="0.5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/img_drinks_image"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:scaleType="fitXY"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_drinks_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/txt_drinks_name"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txt_drinks_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/txt_drinks_quantity"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_drinks_add_on"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/add_on"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/size"
                android:textSize="18sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>