<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:background="@drawable/dialog_conner_10"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/dialog_conner_top_left_right"
        android:fontFamily="@font/roboto_slab_bold"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/tv_rating"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:padding="8dp">

        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:progressTint="@color/app_color_default"
            android:layout_gravity="center"
            android:numStars="5" />
    </LinearLayout>

    <EditText
        android:id="@+id/edt_comment"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:background="@drawable/custom_edit_text"
        android:ems="10"
        android:fontFamily="@font/roboto_slab"
        android:gravity="start|top"
        android:hint="@string/edt_hint_comment"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/black"
        android:textSize="18sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:orientation="horizontal"
        android:weightSum="2">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_cancel"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/btn_cancel"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:background="@drawable/custom_button_ok"
            android:fontFamily="@font/roboto_slab_bold"
            android:text="@string/btn_ok"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </LinearLayout>
</LinearLayout>