<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="2dp"
    android:layout_marginTop="@dimen/margin_8dp"
    android:layout_marginEnd="@dimen/margin_8dp"
    android:layout_marginBottom="2dp"
    android:orientation="vertical"
    app:strokeWidth="0.5dp"
    app:strokeColor="@android:color/darker_gray"
    style="@style/Widget.MaterialComponents.CardView"
    app:cardBackgroundColor="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="10dp"
        android:weightSum="10">

        <ImageView
            android:id="@+id/img_drink_image"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight="3"
            android:scaleType="fitXY"
            android:src="@drawable/app_icon"
            tools:ignore="ContentDescription" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:layout_weight="7"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txt_drink_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab_bold"
                android:text="@string/txt_drinks_name"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txt_drink_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/txt_drinks_price"
                android:textColor="@color/colorAccent"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/txt_drink_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_slab"
                android:text="@string/btn_place_order"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>